<resources>
    <string name="app_name">CallCalenderOrganizerMVC</string>
    <string name="save">Kaydet</string>
    <string name="cancel">Vazgeç</string>
    <string name="add_new_list">Yeni Liste Oluştur</string>
    <string name="noListItems">Hiç Listen yok.\nYeni liste oluştur</string>
    <string name="remind">Hatırlat</string>
    <string name="remove_list">Listeyi Sil</string>
    <string name="edit_list">Liste Ayarları</string>
    <string name="add_new_person">Yeni kişi ekle</string>
    <string name="person">Kişi</string>
    <string name="noPersonSelectedWarning">Henüz listeye hiçbir kişi eklenmemiş.</string>
    <string name="list">Listeler</string>
    <string name="addNewPersonTitle">Yeni Kişi Ekle</string>
    <string name="delete">Sil</string>
    <string name="confirm_delete">Silmek İstediğinizden emin misiniz?</string>
    <string name="inform_no_person_on_the_list">Listede arama yapabilecek hiç kimse yok.</string>
    <string name="begin_date">Başlangıç Tarihi</string>
    <string name="end_date">Bitiş Tarihi</string>
    <string name="notification_from_begin_date_app">Her Yeni Liste Oluşturulduğunda Başlangıç Tarihinde Hatırlatma Aktif Olsun</string>
    <string name="notification_from_end_date_app">Her Yeni Liste Oluşturulduğunda Bitiş Tarihinde Hatırlatma Aktif Olsun</string>
    <string name="notification_from_begin_date">Başlangıç Tarihinde Hatırlatma Aktif</string>
    <string name="notification_from_end_date">Bitiş Tarihinde Hatırlatma Aktif</string>
    <string name="language">Dil</string>
    <string name="settings">Ayarlar</string>
    <string name="begin_date_title">Bu gün araman gereken kişiler var.</string>
    <string name="begin_date_title_and">Bu gün araman gereken kişiler var</string>
    <string name="end_date_title">Bu gün araman gereken kişiler için son günün.</string>
    <string name="end_date_title_and"> ve bazı kişileri aramak için son günün.</string>

    <string name="copy">Kopyala</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
