<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ListDetail">

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_dark"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_above="@+id/save_btn"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/begin_date"
                android:padding="10dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="19-Kas-2018"
                android:layout_weight="1"
                android:background="@color/colorTransperent"
                android:id="@+id/begin_date_btn"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:padding="10dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="19-Kas-2018"
                android:layout_weight="1"
                android:background="@color/colorTransperent"
                android:id="@+id/end_date_btn"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>